--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <option value="+1">+1</option>
                 <option value="+7">+7</option>
             </select>
-            <input class="caixa-texto" type="text" placeholder="Now, write your number here.">
+            <input class="caixa-texto" type="text" placeholder="Now, write the number here.">
             </div>
             <a href="https://wa.me/{número de telefone}" class="a-chat" target="_blank">
                 <button class="btn-chat">Access Chat</button>
