--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
                 <option value="+7">+7</option>
             </select>
             <input class="caixa-texto" type="text" placeholder="Now, write the number here.">
-            </div>
+        </div>
+        
+        <input class="caixa-message" type="text" placeholder="Write the first message">
             <a href="https://wa.me/{número de telefone}" class="a-chat" target="_blank">
                 <button class="btn-chat">Access Chat</button>
             </a>
