--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="content">
         
             <div class="content2">
+                <img src="img/icon-whatsapp.png" alt="" width="80px">
                 <h1>Open chat: WhatsApp</h1>
                 <p>Please enter the number you wish to start with in the chat.</p>
             </div>
